# asc-crs-lacrosse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  example-crs.sh  kompose_competition_overrides.yaml  kompose_development_overrides.yaml
.github/: .templatesyncignore  CODEOWNERS
.github/actions/: trigger-downstream-sync.mjs
.github/linters/: .gitleaks.toml  .markdown-lint  .yamllint  actionlint.yaml
.github/scripts/: set-env.sh
.github/workflows/: README.md  crs.yml  evaluator.yml  load-cp-images-package.yml  mock_crs_package.yml  network-test.yml  package.yml  template-sync.yml  trigger-sync-on-release.yml
crs/: README.md  sift-env
crs/code/: experiment.lisp
crs/code/afl-linux/: build-kernel  build-rootfs  configure-kernel  doit.sh  gdb-vm  run-vm
crs/code/afl-linux/harness/: Cargo.toml
crs/code/afl-linux/harness/src/: afl.rs  guidance.rs  kcov.rs  kmsg.rs  main.rs  prng.rs  shm.rs  tap.rs  util.rs
crs/code/afl-linux/harness/src/harnesses/: external.rs  mod.rs  test_guidance.rs  tipc.rs
crs/code/corpus/: README.md  jenkins.pwn  mock-cp.2.pwn  sample.3g2  sample.3gp  sample.AAI  sample.APNG  sample.ART  sample.AVIF  sample.AVS  sample.BMP2  sample.BMP3  sample.BRF  sample.CALS  sample.CIN  sample.CIP  sample.CMYK  sample.DCX  sample.DDS  sample.DPX  sample.DXT1  sample.EPI  sample.EPS  sample.EPS2  sample.EPS3  sample.EPSF  sample.EPSI  sample.EPT  sample.EPT2  sample.EPT3  sample.EXR  sample.FF  sample.FL32  sample.FLV  (+114 more)
crs/code/grab-a-func/: Cargo.toml
crs/code/grab-a-func/src/: lib.rs  main.rs  path_rewrites.rs
crs/code/grab-a-func/tests/: example.rs  main.c
crs/code/langchain/: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
crs/code/langchain/lacrosse_llm/: __init__.py  check_file.py  check_input_source.py  confirm_vuln.py  count_tokens.py  cwe.py  find_inputs.py  find_povs_for_patch.py  isabel_flaws.py  isabel_rules.py  json_rearranger.py  llm.py  monkeypatch_langchain.py  patch.py  patch_by_diffs.py  patch_file_inputs.py  patch_repair.py  standard_args.py  utils.py
crs/code/langchain/lacrosse_llm/resources/: code_examples.md  cwe-top-25.xml  patch_file_inputs.json
crs/code/langchain/lacrosse_llm/resources/code_examples/: DX-1.md  DX-100-bad.md  DX-100-good.md  DX-110.md  DX-114.md  DX-127.md  DX-128.md  DX-13.md  DX-135.md  DX-136.md  DX-14.md  DX-142.md  DX-18.md  DX-19.md  DX-20.md  DX-22.md  DX-24-bad.md  DX-24-good.md  DX-28.md  DX-30.md  DX-33.md  DX-34.md  DX-87.md  DX-88.md  DX-90.md  DX-92.md  DX-97.md  SIFT-DX-1.md  SIFT-DX-10-bad.md  SIFT-DX-10-good.md  SIFT-DX-11.md  SIFT-DX-12.md  SIFT-DX-13.md  SIFT-DX-14.md  SIFT-DX-15.md  SIFT-DX-16.md  SIFT-DX-17.md  SIFT-DX-2.md  SIFT-DX-3-bad.md  SIFT-DX-3-good.md  (+7 more)
crs/code/langchain/notebooks/: bad_crypto_subset.c  maze-11-cwe-122-bad.c  maze-11-cwe-122-obfuscate-no-complex.c
crs/code/langchain/tests/: test_api.py  test_check_file.py  test_curly_braces.py  test_cwe.py  test_input_source.py  test_isabel_flaws.py  test_parsing.py  test_patch_parse.py
crs/code/langchain/tests/data/: 362example.json  heap_overflow_01_stdin.c  isabel-result.json
crs/src/: Dockerfile  run.sh
mock_crs/: Makefile  README.md
mock_crs/src/: Dockerfile
mock_crs/test/: iapi_function_tests.sh
proprietary/: README.md
sandbox/: Dockerfile  README.md  compose.yaml  example.env  script.js
sandbox/capi/: config.yaml  db_setup.sh
sandbox/iapi/: script.js
sandbox/litellm/: README.md  demo-test.sh  rate-limit-test.js  script.js
sandbox/load_cp_images/: Dockerfile  gitconfig  run.sh
sandbox/nginx/: kube.conf.template  local.conf.template
(+639 files in other folders)
