[tool.poetry]
name = "lacrosse-llm"
version = "0.1.0"
description = ""
authors = ["Robert P. Goldman <rpgoldman@sift.net>"]
license = "SIFT Proprietary"
readme = "README.md"
package-mode = false
include = ["resources/research-concepts-cwes.xml", "resources/software-development-cwes.xml"]



[tool.poetry.dependencies]
python = ">= 3.12, < 4.0"
langchain = "^0.1.11"
requests = "^2.31.0"
numpy = "^1.26.4"
langchain-openai = "0.1.7"
langchain-anthropic = "^0.1.3"
langchain-text-splitters = "^0.0.1"
xmltodict = "^0.13.0"
langchain-google-vertexai = "^1.0.1"
pydantic = "^2.7.1"
litellm = "1.41.2"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
jupyter = "^1.0.0"
jupyterlab-github = "^4.0.0"
jupyterlab = "^4.1.3"
jupyterlab-extensions = "^0.0.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter-contrib-nbextensions = "^0.7.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-datadir = "^1.5.0"
litellm = {version = "1.41.2", extras = ["proxy"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = "True"
# the following is not a tool used in LAX.
exclude = [ "obfuscate_juliet.py" ]

[tool.pytest.ini_options]
required_plugins = [ "pytest-datadir" ]
addopts = "-rA"

