[package]
name = "afl-linux-harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", default-features = false, features = ["std"] }
clap = { version = "4.4.18", default-features = false, features = ["color", "derive", "env", "error-context", "help", "std", "string", "suggestions", "usage"] }
log = { version = "0.4.21", default-features = false }
nix = { version = "0.28.0", default-features = false, features = ["fs", "ioctl", "mman", "process"] }
paste = { version = "1.0.14", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.117", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
simple_logger = { version = "4.3.3", default-features = false, features = ["stderr", "timestamps"] }
